--- a/ClientRuntimes/CSharp/ClientRuntime.Tracing.Tests/ClientRuntime.Tracing.Tests.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Tracing.Tests/ClientRuntime.Tracing.Tests.csproj
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" InitialTargets="TurnOffCodeAnalysis">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" InitialTargets="TurnOffCodeAnalysis">
   <Import Project="..\..\..\packages\xunit.runner.msbuild.2.0.0\build\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.runner.msbuild.props" Condition="Exists('..\..\..\packages\xunit.runner.msbuild.2.0.0\build\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.runner.msbuild.props')" />
   <Import Project="..\..\..\packages\xunit.runner.visualstudio.2.0.0\build\net20\xunit.runner.visualstudio.props" Condition="Exists('..\..\..\packages\xunit.runner.visualstudio.2.0.0\build\net20\xunit.runner.visualstudio.props')" />
   <Import Project="..\..\..\packages\xunit.core.2.0.0\build\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.core.props" Condition="Exists('..\..\..\packages\xunit.core.2.0.0\build\portable-net45+win+wpa81+wp80+monotouch+monoandroid+Xamarin.iOS\xunit.core.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Configuration Condition=" '$(Configuration)' == '' ">mono</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B2FAA0E6-2643-4011-8CFE-BA28BDFFC7E7}</ProjectGuid>
     <LibraryFxTarget Condition="'$(LibraryFxTarget)' == ''">net45</LibraryFxTarget>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.Rest.ClientRuntime.Tracing.Tests</RootNamespace>
-    <AssemblyName>Microsoft.Rest.ClientRuntime.Tracing.Tests</AssemblyName>
+    <AssemblyName>ClientRuntime.Tracing.Tests</AssemblyName>
     <AutoRestTest>true</AutoRestTest>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
@@ -22,6 +22,11 @@
   <PropertyGroup>
     <_DiagnosticsTracingPackageName>Microsoft.Diagnostics.Tracing.TraceEvent.1.0.5</_DiagnosticsTracingPackageName>
     <_DiagnosticsTracingTargets>$(SolutionDir)packages\$(_DiagnosticsTracingPackageName)\tools\Microsoft.Diagnostics.Tracing.TraceEvent.targets</_DiagnosticsTracingTargets>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'mono|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\mono</OutputPath>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\Tools\AutoRest.Settings.targets" />
   <ItemGroup>
@@ -56,15 +61,15 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClientRuntime\ClientRuntime.csproj">
-      <Project>{7f524559-93f9-4f3f-9e2c-af41a0c2e6f4}</Project>
+      <Project>{7F524559-93F9-4F3F-9E2C-AF41A0C2E6F4}</Project>
       <Name>ClientRuntime</Name>
     </ProjectReference>
     <ProjectReference Include="..\ClientRuntime.Etw\ClientRuntime.Etw.csproj">
-      <Project>{50b0a8ce-d290-4eb7-8c6c-16eaab75225e}</Project>
+      <Project>{50B0A8CE-D290-4EB7-8C6C-16EAAB75225E}</Project>
       <Name>ClientRuntime.Etw</Name>
     </ProjectReference>
     <ProjectReference Include="..\ClientRuntime.Log4Net\ClientRuntime.Log4Net.csproj">
-      <Project>{2efd6648-39b4-476a-b302-8bc236f5f1b8}</Project>
+      <Project>{2EFD6648-39B4-476A-B302-8BC236F5F1B8}</Project>
       <Name>ClientRuntime.Log4Net</Name>
     </ProjectReference>
   </ItemGroup>
