make sure templates are generated prior to build and enhance gulp tasks

--- a/Tools/AutoRest.Settings.targets
+++ b/Tools/AutoRest.Settings.targets
@@ -112,7 +112,7 @@
           DestinationFolder="$(_CodeSignDirectory)"/>
   </Target>
 
-  <Target Name="SyncPackageVersions" BeforeTargets="BeforeBuild">
+  <Target Name="SyncPackageVersions" DependsOnTargets="BeforeBuild">
     <!-- Update all explicit references to dependent versions. -->
     <Exec Command="gulp syncDotNetDependencies --basePath &quot;$(MSBuildProjectDirectory)&quot;" />
   </Target>
