--- a/AutoRest/AutoRest.Core/AutoRest.nuspec
+++ b/AutoRest/AutoRest.Core/AutoRest.nuspec
@@ -16,15 +16,15 @@
     <tags>Microsoft AutoRest</tags>
   </metadata>
   <files>
-    <file src="..\binaries\net45\AutoRest.Core.*" target="tools" />
-    <file src="..\binaries\net45\AutoRest.exe" target="tools" />
-    <file src="..\binaries\net45\AutoRest.json" target="tools\AutoRest.json" />
-    <file src="..\binaries\net45\AutoRest.Generator.CSharp.*" target="tools" />
-    <file src="..\binaries\net45\AutoRest.Generator.Azure.CSharp.*" target="tools" />
-    <file src="..\binaries\net45\AutoRest.Generator.Azure.Common.*" target="tools" />
-    <file src="..\binaries\net45\AutoRest.Generator.NodeJS.*" target="tools" />
-    <file src="..\binaries\net45\AutoRest.Generator.Azure.NodeJS.*" target="tools" />
-    <file src="..\binaries\net45\AutoRest.Modeler.Swagger.*" target="tools" />    
-    <file src="..\binaries\net45\Newtonsoft.Json.*" target="tools" />
+    <file src="binaries/net45/AutoRest.Core.dll" target="tools" />
+    <file src="binaries/net45/AutoRest.exe" target="tools" />
+    <file src="binaries/net45/AutoRest.json" target="tools/AutoRest.json" />
+    <file src="binaries/net45/AutoRest.Generator.CSharp.dll" target="tools" />
+    <file src="binaries/net45/AutoRest.Generator.Azure.CSharp.dll" target="tools" />
+    <file src="binaries/net45/AutoRest.Generator.Azure.Common.dll" target="tools" />
+    <file src="binaries/net45/AutoRest.Generator.NodeJS.dll" target="tools" />
+    <file src="binaries/net45/AutoRest.Generator.Azure.NodeJS.dll" target="tools" />
+    <file src="binaries/net45/AutoRest.Modeler.Swagger.dll" target="tools" />
+    <file src="binaries/net45/Newtonsoft.Json.dll" target="tools" />
   </files>
 </package>
