--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/packages.config
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/packages.config
@@ -5,11 +5,12 @@
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.5.207081303-alpha" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
-  <package id="xunit" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.runner.msbuild" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net45" />
+  <package id="xunit" version="2.1.0-beta4-build3050" targetFramework="net451" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net451" />
+  <package id="xunit.assert" version="2.1.0-beta4-build3050" targetFramework="net451" />
+  <package id="xunit.core" version="2.1.0-beta4-build3050" targetFramework="net451" />
+  <package id="xunit.extensibility.core" version="2.1.0-beta4-build3050" targetFramework="net451" />
+  <package id="xunit.extensions" version="2.0.0" targetFramework="net451" />
+  <package id="xunit.runner.msbuild" version="2.1.0-beta4-build3050" targetFramework="net451" />
+  <package id="xunit.runner.visualstudio" version="2.1.0-beta4-build1093" targetFramework="net451" />
 </packages>
