--- a/ClientRuntimes/CSharp/ClientRuntime.Log4Net/Microsoft.Rest.ClientRuntime.Log4Net.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Log4Net/Microsoft.Rest.ClientRuntime.Log4Net.nuspec
@@ -28,9 +28,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="ClientRuntime.Log4Net\**\*.cs" target="src"/>
-    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.dll" target="lib\net45"/>
-    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.pdb" target="lib\net45"/>
-    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.xml" target="lib\net45"/>
+    <file src="ClientRuntimes/CSharp/ClientRuntime.Log4Net/**/*.cs" target="src"/>
+    <file src="binaries/net45/Microsoft.Rest.ClientRuntime.Log4Net.dll" target="lib\net45"/>
+    <file src="binaries/net45/Microsoft.Rest.ClientRuntime.Log4Net.pdb" target="lib\net45"/>
+    <file src="binaries/net45/Microsoft.Rest.ClientRuntime.Log4Net.xml" target="lib\net45"/>
   </files>
 </package>
