--- a/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
@@ -45,13 +45,13 @@
     </frameworkAssemblies>
   </metadata>
   <files>
-    <file src="ClientRuntime\**\*.cs" target="src\Common"/>
-    <file src="ClientRuntime\Properties\*.resx" target="src\Common\Properties"/>
-    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.dll" target="lib\portable-net45+win8+wpa81"/>
-    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.pdb" target="lib\portable-net45+win8+wpa81"/>
-    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.xml" target="lib\portable-net45+win8+wpa81"/>
-    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.dll" target="lib\net45"/>
-    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.pdb" target="lib\net45"/>
-    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.xml" target="lib\net45"/>
+    <file src="ClientRuntimes/CSharp/ClientRuntime/**/*.cs" target="src/Common"/>
+    <file src="ClientRuntimes/CSharp/ClientRuntime/Properties/*.resx" target="src/Common/Properties"/>
+    <file src="binaries/portable/Microsoft.Rest.ClientRuntime.dll" target="lib/portable-net45+win8+wpa81"/>
+    <file src="binaries/portable/Microsoft.Rest.ClientRuntime.pdb" target="lib/portable-net45+win8+wpa81"/>
+    <file src="binaries/portable/Microsoft.Rest.ClientRuntime.xml" target="lib/portable-net45+win8+wpa81"/>
+    <file src="binaries/net45/Microsoft.Rest.ClientRuntime.dll" target="lib/net45"/>
+    <file src="binaries/net45/Microsoft.Rest.ClientRuntime.pdb" target="lib/net45"/>
+    <file src="binaries/net45/Microsoft.Rest.ClientRuntime.xml" target="lib/net45"/>
   </files>
 </package>
