--- a/AutoRest/Generators/AcceptanceTests/NugetPackageTest/packages.config
+++ b/AutoRest/Generators/AcceptanceTests/NugetPackageTest/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <!--when we bump up package versions, please the refresh versions here-->
   <package id="Microsoft.Rest.ClientRuntime" version="1.0.2" targetFramework="net45" />
-  <package id="AutoRest" version="0.13.0" targetFramework="net45" />
+  <package id="autorest" version="0.11.0" targetFramework="net45" />
 
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="xunit" version="2.1.0-beta4-build3050" targetFramework="net451" />
