--- a/ClientRuntimes/CSharp/ClientRuntime.Tests/packages.config
+++ b/ClientRuntimes/CSharp/ClientRuntime.Tests/packages.config
@@ -12,5 +12,6 @@
   <package id="xunit.extensibility.core" version="2.1.0-beta4-build3050" targetFramework="net451" />
   <package id="xunit.extensions" version="2.0.0" targetFramework="net451" />
   <package id="xunit.runner.msbuild" version="2.1.0-beta4-build3050" targetFramework="net451" />
+  <package id="xunit.runner.console" version="2.1.0-beta4-build3050" targetFramework="net451" />
   <package id="xunit.runner.visualstudio" version="2.1.0-beta4-build1093" targetFramework="net451" />
 </packages>
