--- a/Tools/AutoRest.Build.Tasks/AutoRest.Build.Tasks.csproj
+++ b/Tools/AutoRest.Build.Tasks/AutoRest.Build.Tasks.csproj
@@ -41,9 +41,10 @@
     <Compile Include="RegexReplaceTask.cs" />
     <Compile Include="StrongNameUtility.cs" />
     <Compile Include="ValidateStrongNameSignatureTask.cs" />
+    <Compile Include="SetEnvVar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
