Split ClientRuntime.Azure into ClientRuntime.Azure and ClientRuntime.Azure.Authentication

--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/packages.config
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.5.207081303-alpha" targetFramework="net45" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.18.206251556" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="xunit" version="2.1.0-beta4-build3050" targetFramework="net451" />
